--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>random-json-generator</groupId>
     <artifactId>random.json.generator</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -20,5 +21,13 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
